attempt to fix overflow error on windows chrome browser

--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -6,7 +6,7 @@ $secondary: #fcfcfc;
 
 
 $h1:  100px;
-* {
+html {
     overflow-x: hidden;
 }
  //@media (min-width: 750px) {
